data/derived/comb/progs/unify/prog7775.ml.out
Characters 189-194:
  helper (seen',rest') 
                ^^^^^
Error: This expression has type ('a -> 'a list -> bool) list list
       but an expression was expected of type ('a -> 'a list -> bool) list
       Type ('a -> 'a list -> bool) list is not compatible with type
         'a -> 'a list -> bool 
